manifests/champion-league-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: champion-league-deployment
  labels:
    run: champion-league
spec:
  replicas: 2
  selector:
    matchLabels:
      run: champion-league
  template:
    metadata:
      labels:
        run: champion-league
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
      - image: cafaray/champions-league:v6.5.13
        name: champion-league
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
          - name: firebase-secret
            mountPath: /app
            readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: firebase-secret
          secret:
            secretName: firebase-config
      securityContext:
        runAsUser: 185
        fsGroup: 185
        # runAsGroup: 185
