manifests/champion-league-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: champion-league
  name: champion-league
spec:
  imagePullSecrets:
    - name: gcr-json-key
  containers:
  - image: cafaray/champions-league:v7.2.2
    name: champion-league
    ports:
    - containerPort: 8080
    resources:
      requests:
        memory: "512Mi"
        cpu: "250m"
      limits:
        memory: "1Gi"
        cpu: "500m"
    volumeMounts:
      - name: firebase-secret
        mountPath: /app
        readOnly: true
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    - name: firebase-secret
      secret:
        secretName: firebase-config
  securityContext:
    runAsUser: 185
    fsGroup: 185
    # runAsGroup: 185
