manifests/champion-league-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: champion-league
spec:
  selector:
    run: champion-league
  ports:
    - port: 8080          # The port you want to expose the service on
      targetPort: 8080  # The port your pod container listens on
  type: ClusterIP
