manifests/champion-league-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: champion-league
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: champion-league.e9bb0838-6437-45ef-847c-e04a5df6f617.k8s.civo.com
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: champion-league
                port:
                  number: 8080
